--- a/assets/css/landing-page.css
+++ b/assets/css/landing-page.css
@@ -223,13 +223,13 @@ a:focus, a:active {
 }
 
 .btn-warning {
-  border-color: #FFA17F;
-  color: #FFA17F;
+  border-color: #0F6F11;
+  color: #0F6F11;
 }
 .btn-warning:hover, .btn-warning:focus, .btn-warning:active, .btn-warning.active, .open > .btn-warning.dropdown-toggle {
   background-color: transparent;
-  color: #ff967f;
-  border-color: #ff967f;
+  color: #D7EDD8;
+  border-color: #D7EDD8;
 }
 .btn-warning:disabled, .btn-warning[disabled], .btn-warning.disabled {
   background-color: transparent;
@@ -237,12 +237,12 @@ a:focus, a:active {
 }
 .btn-warning.btn-fill {
   color: white;
-  background-color: #FFA17F;
+  background-color: #0F6F11;
   opacity: 1;
   filter: alpha(opacity=100);
 }
 .btn-warning.btn-fill:hover, .btn-warning.btn-fill:focus, .btn-warning.btn-fill:active, .btn-warning.btn-fill.active, .open > .btn-warning.btn-fill.dropdown-toggle {
-  background-color: #ff967f;
+  background-color: #D7EDD8;
   color: white;
 }
 .btn-warning.btn-fill .caret {
@@ -772,10 +772,10 @@ a:focus, a:active {
   background-color: #3ABE41;
 }
 .landing-page .carousel-indicators.carousel-indicators-orange li {
-  border-color: #FFA17F;
+  border-color: #0F6F11;
 }
 .landing-page .carousel-indicators.carousel-indicators-orange .active {
-  background-color: #FFA17F;
+  background-color: #0F6F11;
 }
 .landing-page .carousel-indicators.carousel-indicators-red li {
   border-color: #E01724;
@@ -1199,13 +1199,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
       color:#3ABE41;
     }
     .landing-page .section-features .card.card-orange{ 
-      border-color: #FAD9CD;
+      border-color: #D7EDD8;
     }
     .landing-page .section-features .card.card-orange .icon i{
-      color:#ff967f;
+      color:#D7EDD8;
     }
      .landing-page .section-features .card.card-red{ 
-      border-color: #FFBFC3;
+      border-color: #D7EDD8;
     }
     .landing-page .section-features .card.card-red .icon i{
       color:#E01724;
